--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -55,7 +55,13 @@ sidebar:
       </ul>
     </div>
     {%- endif -%}
-
+    <script src="https://utteranc.es/client.js"
+        repo="ppangddu/blog-comments"
+        issue-term="pathname"
+        theme="dark-blue"
+        crossorigin="anonymous"
+        async>
+</script>
     {%- assign result = hidden | where_exp: "item", "item == 'comments'" -%}
     {%- if result.size == 0 -%}
     <div class="post-comments">
